[gd_scene load_steps=15 format=3 uid="uid://cs5e14efng25y"]

[ext_resource type="ArrayMesh" uid="uid://dc4k7v5onivmm" path="res://Assets/Models/king.obj" id="1_fi1i6"]
[ext_resource type="Script" path="res://Scripts/KingController.gd" id="1_wpit4"]
[ext_resource type="PackedScene" uid="uid://dp3r4qrafhli6" path="res://HUD/KingRequest.tscn" id="2_3yhad"]
[ext_resource type="Script" path="res://Scripts/SubmitHandler.gd" id="3_pheyn"]
[ext_resource type="PackedScene" uid="uid://boemdygcolhqx" path="res://HUD/SubmitUI.tscn" id="4_jvw5u"]
[ext_resource type="PackedScene" uid="uid://deu10d5ayr7xp" path="res://HUD/LevelCompleteUI.tscn" id="6_6enb4"]

[sub_resource type="BoxShape3D" id="BoxShape3D_k5ekd"]
size = Vector3(20, 5, 20)

[sub_resource type="ViewportTexture" id="ViewportTexture_mlqfy"]
viewport_path = NodePath("SubViewport2")

[sub_resource type="ViewportTexture" id="ViewportTexture_i1177"]
viewport_path = NodePath("SubViewport")

[sub_resource type="ViewportTexture" id="ViewportTexture_uu2au"]
viewport_path = NodePath("SubViewport3")

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_yuufh"]
radius = 1.25
height = 3.0

[sub_resource type="GDScript" id="GDScript_gs037"]
script/source = "extends Control


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass
"

[sub_resource type="Animation" id="Animation_0boml"]
resource_name = "cheer"
tracks/0/type = "rotation_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("KingMesh")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 0, 0, 1, 0.2, 1, 0, 0.707107, 0, 0.707107, 0.4, 1, 0, 1, 0, -4.37114e-08, 0.6, 1, 0, -0.707107, 0, 0.707107, 0.8, 1, 0, 0, 0, 1)
tracks/1/type = "position_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("KingMesh")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, 0, 0, 0, 0.4, 1, 0, 2, 0, 0.8, 1, 0, 0, 0)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rl4tu"]
_data = {
"cheer": SubResource("Animation_0boml")
}

[node name="King" type="RigidBody3D"]
script = ExtResource("1_wpit4")

[node name="KingMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
mesh = ExtResource("1_fi1i6")

[node name="Area3D" type="Area3D" parent="KingMesh"]
script = ExtResource("3_pheyn")

[node name="InteractionCollider" type="CollisionShape3D" parent="KingMesh/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.75, 0)
shape = SubResource("BoxShape3D_k5ekd")

[node name="SubmitSprite" type="Sprite3D" parent="KingMesh/Area3D"]
transform = Transform3D(-3, 0, -4.52987e-07, -1.30451e-09, 2.99999, 0.00863937, 4.52985e-07, 0.00863937, -2.99999, 0, 9.20325, 0)
visible = false
modulate = Color(0.231373, 0.231373, 0.231373, 1)
texture = SubResource("ViewportTexture_mlqfy")

[node name="RequestSprite" type="Sprite3D" parent="KingMesh"]
transform = Transform3D(-3, 0, -4.52987e-07, 0, 3, 0, 4.52987e-07, 0, -3, 0, 6.52635, 0)
texture = SubResource("ViewportTexture_i1177")

[node name="LevelCompleteUI" type="Sprite3D" parent="KingMesh"]
transform = Transform3D(-3, 0, -4.52987e-07, 0, 3, 0, 4.52987e-07, 0, -3, 0, 7, 0)
visible = false
texture = SubResource("ViewportTexture_uu2au")

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true

[node name="KingRequestUI" parent="SubViewport" instance=ExtResource("2_3yhad")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.35, 0)
shape = SubResource("CapsuleShape3D_yuufh")

[node name="SubViewport2" type="SubViewport" parent="."]
transparent_bg = true

[node name="SubmitUI" parent="SubViewport2" instance=ExtResource("4_jvw5u")]
script = SubResource("GDScript_gs037")

[node name="SubViewport3" type="SubViewport" parent="."]
disable_3d = true
transparent_bg = true

[node name="LevelCompleteUI" parent="SubViewport3" instance=ExtResource("6_6enb4")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rl4tu")
}

[connection signal="body_entered" from="KingMesh/Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_entered" from="KingMesh/Area3D" to="KingMesh/Area3D" method="_on_body_entered"]
[connection signal="body_exited" from="KingMesh/Area3D" to="." method="_on_area_3d_body_exited"]
[connection signal="body_exited" from="KingMesh/Area3D" to="KingMesh/Area3D" method="_on_body_exited"]
